--- a/translations/cs_CZ.json
+++ b/translations/cs_CZ.json
@@ -33,5 +33,9 @@
     "subject": "Subject",
     "message": "Váš vzkaz",
     "button": "Odeslat"
+  },
+  "shopList": {
+    "description": "Popis",
+    "characteristic": "Charakteristiky"
   }
 }
