design - shop, shop and contacts

--- a/translations/cs_CZ.json
+++ b/translations/cs_CZ.json
@@ -24,5 +24,10 @@
   "shopList": {
     "description": "Popis",
     "characteristic": "Charakteristiky"
+  },
+
+  "quantaty": {
+    "outOfStock": "Vyprodáno",
+    "inStock": "Skladem"
   }
 }
