--- a/translations/cs_CZ.json
+++ b/translations/cs_CZ.json
@@ -39,5 +39,13 @@
   "quantaty": {
     "outOfStock": "Vyprodáno",
     "inStock": "Skladem"
+  },
+  "quiz": {
+    "quit": "Opustit kvíz",
+    "skip": "Přeskočit otázku",
+    "continue": "Pokračovat",
+    "finish": "Dostat rekomendace",
+    "back": "Zpátky",
+    "buy": "Koupit"
   }
 }
