--- a/translations/en.json
+++ b/translations/en.json
@@ -5,20 +5,6 @@
     "weight": "Weight"
   },
 
-  "order": {
-    "email_for_order_confirmation": "E-mail",
-    "first_name": "First name",
-    "last_name": "Last name",
-    "company_name": "Company name",
-    "country": "Country",
-    "city": "City",
-    "address": "Address",
-    "postal_code": "Postal code",
-    "phone": "Phone",
-    "post_method": "Post method",
-    "payment_method": "Payment method"
-  },
-
   "header": {
     "home": "Home",
     "aboutUs": "About us",
@@ -33,11 +19,25 @@
     "email": "Email",
     "subject": "Subject",
     "message": "Message",
-    "button": "Send"
+    "button": "Send",
+    "isNotAValidEmail": "is not a valid email!",
+    "isRequired": "is required!"
+  },
+
+  "message": {
+    "userNameIsRequired": "user name is required",
+    "emailIsRequired": "email is required",
+    "subjectIsRequired": "subject is required",
+    "messageIsRequired": "Message is required"
   },
 
   "shopList": {
     "description": "Description",
     "characteristic": "Characteristic"
+  },
+
+  "quantaty": {
+    "outOfStock": "Out of stock",
+    "inStock": "In stock"
   }
 }
