--- a/translations/cs_CZ.json
+++ b/translations/cs_CZ.json
@@ -25,7 +25,7 @@
   },
 
   "button": {
-    "addToCart": "do košíku",
+    "addToCart": "Do košíku",
     "productDetail": "Detail produktu"
   },
 
